feat: Introducing ErrorDTO codes